add: production configuration